# SYNONIM

./: .gitignore  README.md  pyproject.toml
synonim/: __init__.py  utils.py
synonim/core/: __init__.py  dictlist.py  feature.py  model.py  object.py  profile.py  solution.py
synonim/io/: __init__.py  dataframe.py
synonim/optimizers/: __init__.py  base.py  utils.py
synonim/optimizers/abundance/: __init__.py  abundance_genetic.py  abundance_milp.py
synonim/optimizers/binary/: __init__.py  binary_genetic.py  binary_heuristic.py  binary_milp.py
synonim/util/: context.py
